# massive-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE-MIT  README.md  build.rs
benches/: json_parsing.rs  ws_throughput.rs
examples/: rest_aggregates.rs  ws_realtime_trades.rs
openapi/: checksum.sha256  spec.json
src/: auth.rs  config.rs  error.rs  lib.rs  metrics.rs  parse.rs  util.rs
src/models/: common.rs  crypto.rs  forex.rs  mod.rs  options.rs
src/rest/: asset_class.rs  client.rs  filters.rs  mod.rs  pagination.rs  request.rs
src/rest/endpoints/: corporate_actions.rs  crypto.rs  economy.rs  forex.rs  fundamentals.rs  futures.rs  indicators.rs  market_data.rs  market_status.rs  mod.rs  news.rs  options.rs  partner.rs  quotes.rs  reference.rs  snapshots.rs  trades.rs
src/rest/models/: envelope.rs  mod.rs
src/ws/: client.rs  mod.rs  protocol.rs
src/ws/models/: events.rs  mod.rs
tests/: mock_tests.rs  rest_integration.rs  ws_integration.rs
tests/common/: mod.rs
