[package]
name = "massive-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
description = "High-performance Rust client for Massive.com market data APIs"
repository = "https://github.com/your-org/massive-rs"
documentation = "https://docs.rs/massive-rs"
readme = "README.md"
keywords = ["trading", "market-data", "hft", "websocket", "financial"]
categories = ["api-bindings", "asynchronous", "finance"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio-tungstenite = { version = "0.24", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
bytes = "1"
smol_str = { version = "0.3", features = ["serde"] }
dashmap = { version = "6", optional = true }
futures = "0.3"
tracing = "0.1"
url = "2"
secrecy = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Optional dependencies
simd-json = { version = "0.14", optional = true }
rust_decimal = { version = "1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["rustls", "gzip", "ws"]
rustls = ["reqwest/rustls-tls", "tokio-tungstenite?/rustls-tls-native-roots"]
native-tls = ["reqwest/native-tls", "tokio-tungstenite?/native-tls"]
gzip = ["reqwest/gzip"]
ws = ["dep:tokio-tungstenite", "dep:dashmap"]
simd-json = ["dep:simd-json"]
decimal = ["dep:rust_decimal"]
blocking = ["tokio/rt-multi-thread"]
codegen = []

[[bench]]
name = "json_parsing"
harness = false

[[bench]]
name = "ws_throughput"
harness = false

[[example]]
name = "rest_aggregates"
required-features = []

[[example]]
name = "ws_realtime_trades"
required-features = ["ws"]
